--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	
-	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js'></script>
-	<!--script src="viz.v1.1.0.min.js"></script-->	
+	<script src="viz.v1.1.0.min.js"></script>	
 	
 	<!-- Access the API & Load your JavaScript -->
 	<script type='text/JavaScript'
