--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
-  <title>visjs 3-D Scatter - Medicare Cost Report Statistics</title>
+	<title>visjs 3-D Scatter - Medicare Cost Report Statistics</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js'></script>
 	
 	<!-- Access the API & Load your JavaScript -->
 	<script type='text/JavaScript'
-		src='http://public.tableau.com/javascripts/api/tableau-2.js'></script>	
+		src='https://public.tableau.com/javascripts/api/tableau-2.js'></script>	
 
 </head>
 
